@@ -1,143 +1,168 @@
 ---
 trigger: always_on
-description: This file provides guidance to Claude Code (claude.ai/code) when working with code in this repository.
+description: - Standard PascalCase throughout
 ---
 
-# CLAUDE.md
+# Conventions
 
-This file provides guidance to Claude Code (claude.ai/code) when working with code in this repository.
+## Naming
 
-## Project Overview
+### Classes
+- Standard PascalCase throughout
+- Suffix conventions:
+  - `*Test` — test classes
+  - `*Builder` — builder classes
+  - `*Strategy` — strategy pattern
+  - `*Exception` — exceptions
+  - `*Actor` — actor implementations
+  - `*Provider` — provider pattern
+  - `*Factory` — factory classes
+  - `*Monitor` — monitoring components
+  - `*Handler` — message handlers
 
-Cajun is a high-performance, distributed actor system for Java 21+ that provides a modern concurrency model inspired by Erlang OTP. It features persistence, clustering, backpressure management, and both traditional inheritance-based and modern interface-based actor programming styles.
+### Methods and Variables
+- camelCase throughout
+- Getters: `getX()` convention (e.g., `getActorId()`, `getHelloCount()`)
+- Booleans: `isX()` prefix (e.g., `isReadOnly()`)
+- Builder methods: `withX()` prefix (e.g., `withId()`, `withBackpressureConfig()`)
+- Preset builder methods: `presetX()` (e.g., `presetTimeCritical()`, `presetReliable()`)
+- Test methods: `testX()` or `shouldX()` (e.g., `testBasicMessageProcessing()`, `shouldBeAbleToCreateAGreetingActor()`)
 
-## Development Commands
+### Packages
+Deep hierarchy by functionality:
+- `handler/`, `backpressure/`, `cluster/`, `persistence/`, `config/`, `builder/`, `internal/`, `functional/`, `metrics/`, `runtime/`
+- Test utilities: `com.cajunsystems.test`
+- Nested subpackages for implementations: `impl/`, `filesystem/`, `lmdb/`, `capabilities/`
 
-### Building and Testing
-```bash
-# Build the project
-./gradlew build
+## Java Features in Use
 
-# Run unit tests (excludes performance tests by default)
-./gradlew test
-
-# Run performance tests specifically
-./gradlew performanceTest
-
-# Run a specific test
-./gradlew test --tests "com.cajunsystems.ActorSystemTest"
-
-# Run examples
-./gradlew -PmainClass=examples.TimedCounter run
-```
-
-### Java Configuration
-- **Java Version**: 21+ with `--enable-preview` flag (automatically configured in Gradle)
-- **Main Module**: `lib/` contains the actor system implementation
-- **Source Layout**: Standard Gradle structure under `lib/src/main/java/com/cajunsystems/`
-
-## Architecture Overview
-
-### Core Actor Programming Models
-
-#### Interface-Based Actors (Preferred)
-- **`Handler<Message>`**: For stateless message handling
-- **`StatefulHandler<State, Message>`**: For stateful actors with persistence
-- Created via `ActorBuilder` and `StatefulActorBuilder` with fluent API
-- Separation of business logic (handlers) from infrastructure (actors)
-
-#### Traditional Inheritance-Based Actors
-- **`Actor<Message>`**: Base class for custom actor implementations
-- **`StatefulActor<State, Message>`**: For actors requiring state persistence
-- Direct inheritance approach with lifecycle methods
-
-### Key Architectural Components
-
-#### Persistence System
-- **Provider Pattern**: `PersistenceProvider` interface with `PersistenceProviderRegistry`
-- **Event Sourcing**: Message journals with state snapshots for recovery
-- **Runtime Implementations**: File-based persistence in `runtime/persistence/`
-- **Recovery Strategy**: Hybrid approach using latest snapshot + message replay
-
-#### Cluster Mode
-- **Distributed Architecture**: `ClusterActorSystem` for multi-node deployments
-- **Leader Election**: Etcd-based metadata store with automatic failover
-- **Message Routing**: Transparent local/remote message delivery
-- **Actor Placement**: Rendezvous hashing for consistent distribution
-
-#### Backpressure System
-- **State Management**: NORMAL → WARNING → CRITICAL → RECOVERY state flow
-- **Strategies**: BLOCK, DROP_NEW, DROP_OLDEST, or CUSTOM handling
-- **Configuration**: `BackpressureBuilder` with fluent API and preset configurations
-- **Monitoring**: Event tracking with callbacks and metrics
-
-### Package Organization
-```
-com.cajunsystems/
-├── core/                   # Core abstractions and interfaces
-├── handler/                # Handler interfaces and adapters
-├── internal/              # Internal actor implementations
-├── builder/               # Fluent builder APIs
-├── persistence/           # Persistence abstractions
-│   └── impl/             # Concrete persistence providers
-├── cluster/              # Clustering support
-├── backpressure/         # Backpressure management
-├── config/               # Configuration classes
-└── runtime/              # Runtime implementations
-    ├── cluster/          # Cluster runtime components
-    └── persistence/      # Persistence runtime components
-```
-
-## Development Patterns
-
-### Actor Creation
+### Sealed Interfaces
+Used extensively for exhaustive message type discrimination:
 ```java
-// Interface-based (preferred)
-Pid actorPid = system.actorOf(MyHandler.class)
+public sealed interface CounterProtocol {
+    record CountUp() implements CounterProtocol {}
+    record GetCount(Pid replyTo) implements CounterProtocol {}
+}
+```
+
+### Records
+Used for immutable message types, data classes, and Pid:
+```java
+public record MessageAdapter<T extends Serializable>(
+    T originalMessage, boolean isReadOnly) implements OperationAwareMessage {}
+```
+
+### Pattern Matching (switch expressions)
+```java
+switch (message) {
+    case HelloMessage ignored -> helloCount++;
+    case GetHelloCount ghc -> ghc.replyTo().tell(new HelloCount(helloCount));
+}
+```
+
+### var
+Used selectively in test and implementation code:
+```java
+var actor = new GreetingActor(actorSystem, "Greeting-Actor-1");
+```
+
+### Generics
+Extensive bounded type parameters, generics maintained through builder chains:
+```java
+public class ActorBuilder<Message> { ... }
+public class BackpressureBuilder<T> { ... }
+ConcurrentHashMap<String, Actor<?>> actors;
+```
+
+### Enums
+Used for fixed value sets — each value has JavaDoc:
+- `SupervisionStrategy`: RESUME, RESTART, STOP, ESCALATE
+- `BackpressureState`: NORMAL, WARNING, CRITICAL, RECOVERY
+- `DeliveryGuarantee`: AT_MOST_ONCE, AT_LEAST_ONCE, EXACTLY_ONCE
+- `ThreadPoolFactory.WorkloadType`: IO_BOUND, CPU_BOUND, MIXED
+
+## Code Style
+
+- **Indentation**: 4 spaces
+- **Braces**: Same-line (Java standard)
+- **Blank lines**: Logical grouping between methods and sections
+- **Line length**: No strict enforcement, generally 80–120 chars
+
+## Immutability Patterns
+
+- `final` fields extensively used:
+  ```java
+  private final String actorId;
+  private final ActorSystem system;
+  ```
+- Records are implicitly immutable
+- Stateful actors use immutable state pattern — handler returns new state:
+  ```java
+  State receive(Message msg, State state, ActorContext ctx) {
+      return new State(state.count + 1);  // new instance
+  }
+  ```
+- Thread safety via `ConcurrentHashMap`, `AtomicReference`, `AtomicInteger`, etc.
+
+## Error Handling
+
+### Custom Exceptions
+- `ActorException` — base exception with optional actor ID tracking
+- `JournalException` — persistence errors
+- Multiple constructor overloads for flexibility
+
+### Handler Error Contract
+```java
+// Optional override — return true to reprocess message
+default boolean onError(Message message, Throwable exception, ActorContext context) {
+    return false;
+}
+```
+
+### Supervision
+Hierarchical: RESUME → RESTART → STOP → ESCALATE
+
+## Builder Pattern
+
+All fluent builders:
+- Methods return `this` for chaining
+- `withX()` prefix for all setter-style methods
+- Preset configurations for common scenarios (e.g., `presetTimeCritical()`)
+- Type parameters maintained through chain
+
+```java
+system.actorOf(MyHandler.class)
     .withId("my-actor")
     .withBackpressureConfig(config)
-    .withThreadPoolFactory(customThreadFactory)
+    .withThreadPoolFactory(factory)
     .spawn();
-
-// Stateful with persistence
-Pid statefulPid = system.statefulActorOf(MyStatefulHandler.class, initialState)
-    .withPersistence(journal, snapshotStore)
-    .withThreadPoolFactory(customThreadFactory)
-    .spawn();
-
-// Thread pool factory configuration examples
-ThreadPoolFactory ioOptimized = new ThreadPoolFactory()
-    .optimizeFor(ThreadPoolFactory.WorkloadType.IO_BOUND);
-
-ThreadPoolFactory cpuOptimized = new ThreadPoolFactory()
-    .optimizeFor(ThreadPoolFactory.WorkloadType.CPU_BOUND);
-
-ThreadPoolFactory customFactory = new ThreadPoolFactory()
-    .setExecutorType(ThreadPoolFactory.ThreadPoolType.FIXED)
-    .setFixedPoolSize(4)
-    .setPreferVirtualThreads(false);
 ```
 
-### Message Handling Patterns
-- Use sealed interfaces for message types with pattern matching
-- Implement `Handler<Message>` for stateless processing
-- Implement `StatefulHandler<State, Message>` for stateful processing
-- Return new state from stateful handlers (immutable state pattern)
+## Documentation
 
-### Testing Approach
-- Unit tests use JUnit 5 with Mockito
-- Performance tests are tagged with `@Tag("performance")`
-- Test helpers available in `helper/` and `mocks/` packages
-- Examples demonstrate usage patterns in `examples/` test directory
+- Comprehensive JavaDoc on all public classes and methods
+- Standard format: description → `@param` → `@return` → `@throws`
+- Code examples in `{@code}` and `<pre>` blocks
+- `@SuppressWarnings` used judiciously, only for safe casts
 
-### Configuration Management
-- Use builder patterns for component configuration
-- Persistence providers are registered system-wide
-- Backpressure configured per-actor with preset options
-- Thread pools configured per-actor via `withThreadPoolFactory()` or system-wide via `ThreadPoolFactory`
+## Message Types
 
-<!-- Content truncated to meet Windsurf 6KB limit -->
+The preferred pattern for defining actor messages:
+```java
+// Sealed interface groups all messages for one actor
+public sealed interface MyProtocol {
+    record DoSomething(String data) implements MyProtocol {}
+    record GetResult(Pid replyTo) implements MyProtocol {}
+}
+```
+
+## Serialization
+
+State and message classes used with stateful actors must:
+- Implement `java.io.Serializable`
+- All fields must be serializable or marked `transient`
+- `serialVersionUID` recommended
 
 ---
 > Source: [CajunSystems/cajun](https://github.com/CajunSystems/cajun) — distributed by [TomeVault](https://tomevault.io).
-<!-- tomevault:4.0:windsurf_rules:2026-05-21 -->
+<!-- tomevault:4.0:windsurf_rules:2026-07-26 -->
